# TinyPlayer

./: .gitignore  CMakeLists.txt  Icons.qrc  LICENSE  README.md  TinyPlayer_zh_CN.ts  meta.rc  qm.qrc  readme.htm  resource.qrc
images/: stylesheet.qss
src/: down.py  down.spec  formatCheck.cpp  framelesswindow.cpp  framelesswindow.h  gequbao.py  global_include.h  main.cpp  music.cpp  music.h  net_music.py  net_music.spec  onlineseacher.cpp  onlineseacher.h  play.cpp  play.h  player.cpp  player.h  playerbutton.cpp  playerbutton.h  playerslider.cpp  playerslider.h  playerwindow.cpp  playerwindow.h  playerwindow.ui  playlistview.cpp  playlistview.h  requirements.txt  search_music.py  searchresultwidget.cpp  searchresultwidget.h  searchresultwidget.ui  settingwindow.cpp  settingwindow.h  settingwindow.ui  xzmp3.py
vlc-qt_1.1.0/: README.md
